--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Base Apparel</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <div id="bg">
+<body id="bg">
+    <div >
         <div class="logo mobile">
             <img src="./images/logo.svg" alt="logo" height="25px">
         </div>
