--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 </div>
                 <button>></button>
             </div>
+            <div class="desktop">
+                <p>Please provide a valid email</p>
+            </div>
         </div>
         <div class="right desktop">
             <img src="./images/hero-desktop.jpg" alt="lady">
